// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add window adds a new window if layout is empty 1`] = `
{
  "payload": {
    "panel": undefined,
    "windows": {
      "direction": "row",
      "first": {
        "direction": "row",
        "first": {
          "direction": "column",
          "first": {
            "direction": "row",
            "first": "UMAP",
            "second": "Cell sets and Metadata",
            "splitPercentage": 60,
          },
          "second": "Heatmap",
          "splitPercentage": 50,
        },
        "second": "newPanel",
        "splitPercentage": 60,
      },
      "second": "Genes",
      "splitPercentage": 70,
    },
  },
  "type": "UPDATE_LAYOUT",
}
`;

exports[`add window adds a window to existing ones 1`] = `
{
  "payload": {
    "panel": "newPanel",
    "windows": {
      "direction": "row",
      "first": {
        "direction": "row",
        "first": {
          "direction": "column",
          "first": {
            "direction": "row",
            "first": "UMAP",
            "second": "Cell sets and Metadata",
            "splitPercentage": 60,
          },
          "second": "Heatmap",
          "splitPercentage": 50,
        },
        "second": "newWindow",
        "splitPercentage": 60,
      },
      "second": "Genes",
      "splitPercentage": 70,
    },
  },
  "type": "UPDATE_LAYOUT",
}
`;

exports[`add window updates panel if window exists 1`] = `
{
  "payload": {
    "panel": "Differential expression",
    "windows": {
      "direction": "row",
      "first": {
        "direction": "column",
        "first": {
          "direction": "row",
          "first": "UMAP",
          "second": "Cell sets and Metadata",
          "splitPercentage": 60,
        },
        "second": "Heatmap",
        "splitPercentage": 50,
      },
      "second": "Genes",
      "splitPercentage": 70,
    },
  },
  "type": "UPDATE_LAYOUT",
}
`;
